# bytehangar

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  plan.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: e2e.mjs  run-e2e.sh
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/src/client/: index.ts
sdk/src/react/: index.tsx
sdk/src/server/: index.ts
sdk/src/shared/: index.ts
server/: .env.example  Cargo.toml
server/migrations/: 0001_init.sql  0002_private_files.sql  0003_webhooks.sql  0004_webhook_deliveries.sql  0005_grant_prune_index.sql
server/src/: audit.rs  auth.rs  config.rs  error.rs  main.rs  metrics.rs  rate_limit.rs  secrets.rs  ssrf.rs  state.rs
server/src/blob/: mod.rs
server/src/catalog/: mod.rs
server/src/crypto/: mod.rs
server/src/db/: mod.rs
server/src/domain/: mod.rs
server/src/files/: mod.rs
server/src/gc/: mod.rs
server/src/grants/: mod.rs
server/src/http/: mod.rs
server/src/tenants/: mod.rs
server/src/usage/: mod.rs
server/src/webhooks/: mod.rs
