[package]
name = "bytehangar"
version = "1.1.0"
edition = "2021"
description = "Open-source self-hostable file storage — core server"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
rand = "0.8"
bytes = "1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
hex = "0.4"
base64 = "0.22"
infer = "0.19"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
aws-sdk-s3 = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
